# Lidar_Object_Tracking

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
lidar_object_tracking/: __init__.py  dataset.py  features.py  plots.py
lidar_object_tracking/modeling/: predict.py  train.py
notebooks/: 00_01_dpb_unpacking-dataset.ipynb  00_02_dpb_clustering_analysis.ipynb  00_03_dpb_clustering_with_np_arrays.ipynb  01-unpacking_dataset.ipynb  02-clustering_with_np_arrays.ipynb  03-kalman_filter.ipynb  try_tensor.ipynb
scripts/: dataset.py  features.py  plots.py
