[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "scripts"
version = "1.0.0"
description = "Open Dataset to igorithms"
authors = [
  { name = "Daniel Bossaller" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "dotenv>=0.9.9",
    "ipympl>=0.10.0",
    "ipython",
    "jupyterlab",
    "loguru",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "plotly>=6.5.2",
    "pykalman>=0.11.2",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer>=0.24.1",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["scripts"]
include = ["pyproject.toml", "scripts/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["scripts"]
force-sort-within-sections = true

